exports[`prefer-path2d > invalid(1): function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.arc(170, 60, 50, 0, 2 * Math.PI);\n\tcontext.stroke();\n}\n\nfunction step() {\n\tdraw();\n\n\tif (foo) {\n\t\trequestAnimationFrame(step);\n\t}\n}\n\nrequestAnimationFrame(step); 1`] = `

   1 | function draw() {
   2 | 	context.moveTo(220, 60);
   3 | 	context.arc(170, 60, 50, 0, 2 * Math.PI);
   4 | 	context.stroke();
   5 | }
   6 |
   7 | function step() {
   8 | 	draw();
   9 |
  10 | 	if (foo) {
  11 | 		requestAnimationFrame(step);
  12 | 	}
  13 | }
  14 |
  15 | requestAnimationFrame(step);

`;

exports[`prefer-path2d > invalid(1): function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.arc(170, 60, 50, 0, 2 * Math.PI);\n\tcontext.stroke();\n}\n\nfunction step() {\n\tdraw();\n\n\tif (foo) {\n\t\trequestAnimationFrame(step);\n\t}\n}\n\nrequestAnimationFrame(step); 2`] = `

Message:
   1 | function draw() {
>  2 | 	context.moveTo(220, 60);
     | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
   3 | 	context.arc(170, 60, 50, 0, 2 * Math.PI);
   4 | 	context.stroke();
   5 | }
   6 |
   7 | function step() {
   8 | 	draw();
   9 |
  10 | 	if (foo) {
  11 | 		requestAnimationFrame(step);
  12 | 	}
  13 | }
  14 |
  15 | requestAnimationFrame(step);

`;

exports[`prefer-path2d > invalid(10): function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}\n\nfor (const item of items) {\n\tdraw(item);\n} 1`] = `

  1 | function draw() {
  2 | 	context.moveTo(220, 60);
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | }
  6 |
  7 | for (const item of items) {
  8 | 	draw(item);
  9 | }

`;

exports[`prefer-path2d > invalid(10): function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}\n\nfor (const item of items) {\n\tdraw(item);\n} 2`] = `

Message:
  1 | function draw() {
> 2 | 	context.moveTo(220, 60);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | }
  6 |
  7 | for (const item of items) {
  8 | 	draw(item);
  9 | }

`;

exports[`prefer-path2d > invalid(11): const context = canvas.getContext('2d');\n\nfor (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.stroke();\n} 1`] = `

  1 | const context = canvas.getContext('2d');
  2 |
  3 | for (const item of items) {
  4 | 	context.moveTo(item.x, item.y);
  5 | 	context.lineTo(item.x + 1, item.y + 1);
  6 | 	context.stroke();
  7 | }

`;

exports[`prefer-path2d > invalid(11): const context = canvas.getContext('2d');\n\nfor (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.stroke();\n} 2`] = `

Message:
  1 | const context = canvas.getContext('2d');
  2 |
  3 | for (const item of items) {
> 4 | 	context.moveTo(item.x, item.y);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  5 | 	context.lineTo(item.x + 1, item.y + 1);
  6 | 	context.stroke();
  7 | }

`;

exports[`prefer-path2d > invalid(12): let renderingContext = canvas.getContext('2d');\n\nfor (const item of items) {\n\trenderingContext.moveTo(item.x, item.y);\n\trenderingContext.lineTo(item.x + 1, item.y + 1);\n\trenderingContext.stroke();\n} 1`] = `

  1 | let renderingContext = canvas.getContext('2d');
  2 |
  3 | for (const item of items) {
  4 | 	renderingContext.moveTo(item.x, item.y);
  5 | 	renderingContext.lineTo(item.x + 1, item.y + 1);
  6 | 	renderingContext.stroke();
  7 | }

`;

exports[`prefer-path2d > invalid(12): let renderingContext = canvas.getContext('2d');\n\nfor (const item of items) {\n\trenderingContext.moveTo(item.x, item.y);\n\trenderingContext.lineTo(item.x + 1, item.y + 1);\n\trenderingContext.stroke();\n} 2`] = `

Message:
  1 | let renderingContext = canvas.getContext('2d');
  2 |
  3 | for (const item of items) {
> 4 | 	renderingContext.moveTo(item.x, item.y);
    | 	                 ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  5 | 	renderingContext.lineTo(item.x + 1, item.y + 1);
  6 | 	renderingContext.stroke();
  7 | }

`;

exports[`prefer-path2d > invalid(13): while (enabled) {\n\tctx.beginPath();\n\tctx.moveTo(220, 60);\n\tctx.arc(170, 60, 50, 0, 2 * Math.PI);\n\tctx.fill('evenodd');\n} 1`] = `

  1 | while (enabled) {
  2 | 	ctx.beginPath();
  3 | 	ctx.moveTo(220, 60);
  4 | 	ctx.arc(170, 60, 50, 0, 2 * Math.PI);
  5 | 	ctx.fill('evenodd');
  6 | }

`;

exports[`prefer-path2d > invalid(13): while (enabled) {\n\tctx.beginPath();\n\tctx.moveTo(220, 60);\n\tctx.arc(170, 60, 50, 0, 2 * Math.PI);\n\tctx.fill('evenodd');\n} 2`] = `

Message:
  1 | while (enabled) {
  2 | 	ctx.beginPath();
> 3 | 	ctx.moveTo(220, 60);
    | 	    ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 	ctx.arc(170, 60, 50, 0, 2 * Math.PI);
  5 | 	ctx.fill('evenodd');
  6 | }

`;

exports[`prefer-path2d > invalid(14): context.moveTo(220, 60);\n\nfor (const item of items) {\n\tcontext.lineTo(item.x, item.y);\n\tcontext.arc(item.x, item.y, 50, 0, 2 * Math.PI);\n\tcontext.stroke();\n} 1`] = `

  1 | context.moveTo(220, 60);
  2 |
  3 | for (const item of items) {
  4 | 	context.lineTo(item.x, item.y);
  5 | 	context.arc(item.x, item.y, 50, 0, 2 * Math.PI);
  6 | 	context.stroke();
  7 | }

`;

exports[`prefer-path2d > invalid(14): context.moveTo(220, 60);\n\nfor (const item of items) {\n\tcontext.lineTo(item.x, item.y);\n\tcontext.arc(item.x, item.y, 50, 0, 2 * Math.PI);\n\tcontext.stroke();\n} 2`] = `

Message:
  1 | context.moveTo(220, 60);
  2 |
  3 | for (const item of items) {
> 4 | 	context.lineTo(item.x, item.y);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  5 | 	context.arc(item.x, item.y, 50, 0, 2 * Math.PI);
  6 | 	context.stroke();
  7 | }

`;

exports[`prefer-path2d > invalid(15): for (const item of items) {\n\tcontext.rect(item.x, item.y, item.width, item.height);\n\tcontext.closePath();\n\tcontext.stroke();\n} 1`] = `

  1 | for (const item of items) {
  2 | 	context.rect(item.x, item.y, item.width, item.height);
  3 | 	context.closePath();
  4 | 	context.stroke();
  5 | }

`;

exports[`prefer-path2d > invalid(15): for (const item of items) {\n\tcontext.rect(item.x, item.y, item.width, item.height);\n\tcontext.closePath();\n\tcontext.stroke();\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	context.rect(item.x, item.y, item.width, item.height);
    | 	        ^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.closePath();
  4 | 	context.stroke();
  5 | }

`;

exports[`prefer-path2d > invalid(16): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.stroke();\n\tcontext.beginPath();\n\tcontext.moveTo(item.x + 2, item.y + 2);\n\tcontext.stroke();\n} 1`] = `

  1 | for (const item of items) {
  2 | 	context.moveTo(item.x, item.y);
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.stroke();
  5 | 	context.beginPath();
  6 | 	context.moveTo(item.x + 2, item.y + 2);
  7 | 	context.stroke();
  8 | }

`;

exports[`prefer-path2d > invalid(16): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.stroke();\n\tcontext.beginPath();\n\tcontext.moveTo(item.x + 2, item.y + 2);\n\tcontext.stroke();\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	context.moveTo(item.x, item.y);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.stroke();
  5 | 	context.beginPath();
  6 | 	context.moveTo(item.x + 2, item.y + 2);
  7 | 	context.stroke();
  8 | }

`;

exports[`prefer-path2d > invalid(17): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.clip();\n} 1`] = `

  1 | for (const item of items) {
  2 | 	context.moveTo(item.x, item.y);
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.clip();
  5 | }

`;

exports[`prefer-path2d > invalid(17): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.clip();\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	context.moveTo(item.x, item.y);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.clip();
  5 | }

`;

exports[`prefer-path2d > invalid(18): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.clip('evenodd');\n} 1`] = `

  1 | for (const item of items) {
  2 | 	context.moveTo(item.x, item.y);
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.clip('evenodd');
  5 | }

`;

exports[`prefer-path2d > invalid(18): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.clip('evenodd');\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	context.moveTo(item.x, item.y);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.clip('evenodd');
  5 | }

`;

exports[`prefer-path2d > invalid(19): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.isPointInPath(item.x, item.y);\n} 1`] = `

  1 | for (const item of items) {
  2 | 	context.moveTo(item.x, item.y);
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.isPointInPath(item.x, item.y);
  5 | }

`;

exports[`prefer-path2d > invalid(19): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.isPointInPath(item.x, item.y);\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	context.moveTo(item.x, item.y);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.isPointInPath(item.x, item.y);
  5 | }

`;

exports[`prefer-path2d > invalid(2): requestAnimationFrame(() => {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}); 1`] = `

  1 | requestAnimationFrame(() => {
  2 | 	context.moveTo(220, 60);
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | });

`;

exports[`prefer-path2d > invalid(2): requestAnimationFrame(() => {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}); 2`] = `

Message:
  1 | requestAnimationFrame(() => {
> 2 | 	context.moveTo(220, 60);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | });

`;

exports[`prefer-path2d > invalid(20): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.isPointInPath(item.x, item.y, 'evenodd');\n} 1`] = `

  1 | for (const item of items) {
  2 | 	context.moveTo(item.x, item.y);
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.isPointInPath(item.x, item.y, 'evenodd');
  5 | }

`;

exports[`prefer-path2d > invalid(20): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.isPointInPath(item.x, item.y, 'evenodd');\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	context.moveTo(item.x, item.y);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.isPointInPath(item.x, item.y, 'evenodd');
  5 | }

`;

exports[`prefer-path2d > invalid(21): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.isPointInStroke(item.x, item.y);\n} 1`] = `

  1 | for (const item of items) {
  2 | 	context.moveTo(item.x, item.y);
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.isPointInStroke(item.x, item.y);
  5 | }

`;

exports[`prefer-path2d > invalid(21): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.isPointInStroke(item.x, item.y);\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	context.moveTo(item.x, item.y);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.isPointInStroke(item.x, item.y);
  5 | }

`;

exports[`prefer-path2d > invalid(22): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.stroke();\n\n\tctx.moveTo(item.x, item.y);\n\tctx.lineTo(item.x + 1, item.y + 1);\n\tctx.stroke();\n} 1`] = `

  1 | for (const item of items) {
  2 | 	context.moveTo(item.x, item.y);
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.stroke();
  5 |
  6 | 	ctx.moveTo(item.x, item.y);
  7 | 	ctx.lineTo(item.x + 1, item.y + 1);
  8 | 	ctx.stroke();
  9 | }

`;

exports[`prefer-path2d > invalid(22): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.stroke();\n\n\tctx.moveTo(item.x, item.y);\n\tctx.lineTo(item.x + 1, item.y + 1);\n\tctx.stroke();\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	context.moveTo(item.x, item.y);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.stroke();
  5 |
  6 | 	ctx.moveTo(item.x, item.y);
  7 | 	ctx.lineTo(item.x + 1, item.y + 1);
  8 | 	ctx.stroke();
  9 | }

`;

exports[`prefer-path2d > invalid(22): for (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.stroke();\n\n\tctx.moveTo(item.x, item.y);\n\tctx.lineTo(item.x + 1, item.y + 1);\n\tctx.stroke();\n} 3`] = `

Message:
  1 | for (const item of items) {
  2 | 	context.moveTo(item.x, item.y);
  3 | 	context.lineTo(item.x + 1, item.y + 1);
  4 | 	context.stroke();
  5 |
> 6 | 	ctx.moveTo(item.x, item.y);
    | 	    ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  7 | 	ctx.lineTo(item.x + 1, item.y + 1);
  8 | 	ctx.stroke();
  9 | }

`;

exports[`prefer-path2d > invalid(23): function draw(context: CanvasRenderingContext2D) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 1`] = `

  1 | function draw(context: CanvasRenderingContext2D) {
  2 | 	for (const item of items) {
  3 | 		context.moveTo(item.x, item.y);
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(23): function draw(context: CanvasRenderingContext2D) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw(context: CanvasRenderingContext2D) {
  2 | 	for (const item of items) {
> 3 | 		context.moveTo(item.x, item.y);
    | 		        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(24): function draw<Context extends CanvasRenderingContext2D>(context: Context) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 1`] = `

  1 | function draw<Context extends CanvasRenderingContext2D>(context: Context) {
  2 | 	for (const item of items) {
  3 | 		context.moveTo(item.x, item.y);
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(24): function draw<Context extends CanvasRenderingContext2D>(context: Context) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw<Context extends CanvasRenderingContext2D>(context: Context) {
  2 | 	for (const item of items) {
> 3 | 		context.moveTo(item.x, item.y);
    | 		        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(25): function draw(context: CanvasRenderingContext2D) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 1`] = `

Filename: file.ts

  1 | function draw(context: CanvasRenderingContext2D) {
  2 | 	for (const item of items) {
  3 | 		context.moveTo(item.x, item.y);
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(25): function draw(context: CanvasRenderingContext2D) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw(context: CanvasRenderingContext2D) {
  2 | 	for (const item of items) {
> 3 | 		context.moveTo(item.x, item.y);
    | 		        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(26): function draw(context: CanvasRenderingContext2D | undefined) {\n\tif (!context) {\n\t\treturn;\n\t}\n\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 1`] = `

Filename: file.ts

   1 | function draw(context: CanvasRenderingContext2D | undefined) {
   2 | 	if (!context) {
   3 | 		return;
   4 | 	}
   5 |
   6 | 	for (const item of items) {
   7 | 		context.moveTo(item.x, item.y);
   8 | 		context.lineTo(item.x + 1, item.y + 1);
   9 | 		context.stroke();
  10 | 	}
  11 | }

`;

exports[`prefer-path2d > invalid(26): function draw(context: CanvasRenderingContext2D | undefined) {\n\tif (!context) {\n\t\treturn;\n\t}\n\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 2`] = `

Message:
   1 | function draw(context: CanvasRenderingContext2D | undefined) {
   2 | 	if (!context) {
   3 | 		return;
   4 | 	}
   5 |
   6 | 	for (const item of items) {
>  7 | 		context.moveTo(item.x, item.y);
     | 		        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
   8 | 		context.lineTo(item.x + 1, item.y + 1);
   9 | 		context.stroke();
  10 | 	}
  11 | }

`;

exports[`prefer-path2d > invalid(27): function draw(context: CanvasRenderingContext2D | string) {\n\tif (typeof context === 'string') {\n\t\treturn;\n\t}\n\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 1`] = `

Filename: file.ts

   1 | function draw(context: CanvasRenderingContext2D | string) {
   2 | 	if (typeof context === 'string') {
   3 | 		return;
   4 | 	}
   5 |
   6 | 	for (const item of items) {
   7 | 		context.moveTo(item.x, item.y);
   8 | 		context.lineTo(item.x + 1, item.y + 1);
   9 | 		context.stroke();
  10 | 	}
  11 | }

`;

exports[`prefer-path2d > invalid(27): function draw(context: CanvasRenderingContext2D | string) {\n\tif (typeof context === 'string') {\n\t\treturn;\n\t}\n\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 2`] = `

Message:
   1 | function draw(context: CanvasRenderingContext2D | string) {
   2 | 	if (typeof context === 'string') {
   3 | 		return;
   4 | 	}
   5 |
   6 | 	for (const item of items) {
>  7 | 		context.moveTo(item.x, item.y);
     | 		        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
   8 | 		context.lineTo(item.x + 1, item.y + 1);
   9 | 		context.stroke();
  10 | 	}
  11 | }

`;

exports[`prefer-path2d > invalid(28): function draw(context: CanvasRenderingContext2D & {scaleFactor: number}) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 1`] = `

Filename: file.ts

  1 | function draw(context: CanvasRenderingContext2D & {scaleFactor: number}) {
  2 | 	for (const item of items) {
  3 | 		context.moveTo(item.x, item.y);
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(28): function draw(context: CanvasRenderingContext2D & {scaleFactor: number}) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw(context: CanvasRenderingContext2D & {scaleFactor: number}) {
  2 | 	for (const item of items) {
> 3 | 		context.moveTo(item.x, item.y);
    | 		        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(29): interface Canvas2DContext extends CanvasRenderingContext2D {}\n\nfunction draw(renderingContext: Canvas2DContext) {\n\tfor (const item of items) {\n\t\trenderingContext.moveTo(item.x, item.y);\n\t\trenderingContext.lineTo(item.x + 1, item.y + 1);\n\t\trenderingContext.stroke();\n\t}\n} 1`] = `

Filename: file.ts

  1 | interface Canvas2DContext extends CanvasRenderingContext2D {}
  2 |
  3 | function draw(renderingContext: Canvas2DContext) {
  4 | 	for (const item of items) {
  5 | 		renderingContext.moveTo(item.x, item.y);
  6 | 		renderingContext.lineTo(item.x + 1, item.y + 1);
  7 | 		renderingContext.stroke();
  8 | 	}
  9 | }

`;

exports[`prefer-path2d > invalid(29): interface Canvas2DContext extends CanvasRenderingContext2D {}\n\nfunction draw(renderingContext: Canvas2DContext) {\n\tfor (const item of items) {\n\t\trenderingContext.moveTo(item.x, item.y);\n\t\trenderingContext.lineTo(item.x + 1, item.y + 1);\n\t\trenderingContext.stroke();\n\t}\n} 2`] = `

Message:
  1 | interface Canvas2DContext extends CanvasRenderingContext2D {}
  2 |
  3 | function draw(renderingContext: Canvas2DContext) {
  4 | 	for (const item of items) {
> 5 | 		renderingContext.moveTo(item.x, item.y);
    | 		                 ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  6 | 		renderingContext.lineTo(item.x + 1, item.y + 1);
  7 | 		renderingContext.stroke();
  8 | 	}
  9 | }

`;

exports[`prefer-path2d > invalid(3): requestAnimationFrame(function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}); 1`] = `

  1 | requestAnimationFrame(function draw() {
  2 | 	context.moveTo(220, 60);
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | });

`;

exports[`prefer-path2d > invalid(3): requestAnimationFrame(function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}); 2`] = `

Message:
  1 | requestAnimationFrame(function draw() {
> 2 | 	context.moveTo(220, 60);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | });

`;

exports[`prefer-path2d > invalid(30): function draw(context: OffscreenCanvasRenderingContext2D) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 1`] = `

Filename: file.ts

  1 | function draw(context: OffscreenCanvasRenderingContext2D) {
  2 | 	for (const item of items) {
  3 | 		context.moveTo(item.x, item.y);
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(30): function draw(context: OffscreenCanvasRenderingContext2D) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw(context: OffscreenCanvasRenderingContext2D) {
  2 | 	for (const item of items) {
> 3 | 		context.moveTo(item.x, item.y);
    | 		        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(31): const canvas = document.createElement('canvas');\nconst context = canvas.getContext('2d')!;\n\nfor (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.stroke();\n} 1`] = `

Filename: file.ts

  1 | const canvas = document.createElement('canvas');
  2 | const context = canvas.getContext('2d')!;
  3 |
  4 | for (const item of items) {
  5 | 	context.moveTo(item.x, item.y);
  6 | 	context.lineTo(item.x + 1, item.y + 1);
  7 | 	context.stroke();
  8 | }

`;

exports[`prefer-path2d > invalid(31): const canvas = document.createElement('canvas');\nconst context = canvas.getContext('2d')!;\n\nfor (const item of items) {\n\tcontext.moveTo(item.x, item.y);\n\tcontext.lineTo(item.x + 1, item.y + 1);\n\tcontext.stroke();\n} 2`] = `

Message:
  1 | const canvas = document.createElement('canvas');
  2 | const context = canvas.getContext('2d')!;
  3 |
  4 | for (const item of items) {
> 5 | 	context.moveTo(item.x, item.y);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  6 | 	context.lineTo(item.x + 1, item.y + 1);
  7 | 	context.stroke();
  8 | }

`;

exports[`prefer-path2d > invalid(32): function draw<Context extends CanvasRenderingContext2D>(context: Context) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 1`] = `

Filename: file.ts

  1 | function draw<Context extends CanvasRenderingContext2D>(context: Context) {
  2 | 	for (const item of items) {
  3 | 		context.moveTo(item.x, item.y);
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(32): function draw<Context extends CanvasRenderingContext2D>(context: Context) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw<Context extends CanvasRenderingContext2D>(context: Context) {
  2 | 	for (const item of items) {
> 3 | 		context.moveTo(item.x, item.y);
    | 		        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(33): function draw(renderingContext: unknown) {\n\tfor (const item of items) {\n\t\t(renderingContext satisfies CanvasRenderingContext2D).moveTo(item.x, item.y);\n\t\t(renderingContext satisfies CanvasRenderingContext2D).lineTo(item.x + 1, item.y + 1);\n\t\t(renderingContext satisfies CanvasRenderingContext2D).stroke();\n\t}\n} 1`] = `

  1 | function draw(renderingContext: unknown) {
  2 | 	for (const item of items) {
  3 | 		(renderingContext satisfies CanvasRenderingContext2D).moveTo(item.x, item.y);
  4 | 		(renderingContext satisfies CanvasRenderingContext2D).lineTo(item.x + 1, item.y + 1);
  5 | 		(renderingContext satisfies CanvasRenderingContext2D).stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(33): function draw(renderingContext: unknown) {\n\tfor (const item of items) {\n\t\t(renderingContext satisfies CanvasRenderingContext2D).moveTo(item.x, item.y);\n\t\t(renderingContext satisfies CanvasRenderingContext2D).lineTo(item.x + 1, item.y + 1);\n\t\t(renderingContext satisfies CanvasRenderingContext2D).stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw(renderingContext: unknown) {
  2 | 	for (const item of items) {
> 3 | 		(renderingContext satisfies CanvasRenderingContext2D).moveTo(item.x, item.y);
    | 		                                                      ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		(renderingContext satisfies CanvasRenderingContext2D).lineTo(item.x + 1, item.y + 1);
  5 | 		(renderingContext satisfies CanvasRenderingContext2D).stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(34): type Context = CanvasRenderingContext2D;\n\nfunction draw(renderingContext: Context) {\n\tfor (const item of items) {\n\t\trenderingContext.moveTo(item.x, item.y);\n\t\trenderingContext.lineTo(item.x + 1, item.y + 1);\n\t\trenderingContext.stroke();\n\t}\n} 1`] = `

  1 | type Context = CanvasRenderingContext2D;
  2 |
  3 | function draw(renderingContext: Context) {
  4 | 	for (const item of items) {
  5 | 		renderingContext.moveTo(item.x, item.y);
  6 | 		renderingContext.lineTo(item.x + 1, item.y + 1);
  7 | 		renderingContext.stroke();
  8 | 	}
  9 | }

`;

exports[`prefer-path2d > invalid(34): type Context = CanvasRenderingContext2D;\n\nfunction draw(renderingContext: Context) {\n\tfor (const item of items) {\n\t\trenderingContext.moveTo(item.x, item.y);\n\t\trenderingContext.lineTo(item.x + 1, item.y + 1);\n\t\trenderingContext.stroke();\n\t}\n} 2`] = `

Message:
  1 | type Context = CanvasRenderingContext2D;
  2 |
  3 | function draw(renderingContext: Context) {
  4 | 	for (const item of items) {
> 5 | 		renderingContext.moveTo(item.x, item.y);
    | 		                 ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  6 | 		renderingContext.lineTo(item.x + 1, item.y + 1);
  7 | 		renderingContext.stroke();
  8 | 	}
  9 | }

`;

exports[`prefer-path2d > invalid(35): interface Context extends CanvasRenderingContext2D {}\n\nfunction draw(renderingContext: Context) {\n\tfor (const item of items) {\n\t\trenderingContext.moveTo(item.x, item.y);\n\t\trenderingContext.lineTo(item.x + 1, item.y + 1);\n\t\trenderingContext.stroke();\n\t}\n} 1`] = `

  1 | interface Context extends CanvasRenderingContext2D {}
  2 |
  3 | function draw(renderingContext: Context) {
  4 | 	for (const item of items) {
  5 | 		renderingContext.moveTo(item.x, item.y);
  6 | 		renderingContext.lineTo(item.x + 1, item.y + 1);
  7 | 		renderingContext.stroke();
  8 | 	}
  9 | }

`;

exports[`prefer-path2d > invalid(35): interface Context extends CanvasRenderingContext2D {}\n\nfunction draw(renderingContext: Context) {\n\tfor (const item of items) {\n\t\trenderingContext.moveTo(item.x, item.y);\n\t\trenderingContext.lineTo(item.x + 1, item.y + 1);\n\t\trenderingContext.stroke();\n\t}\n} 2`] = `

Message:
  1 | interface Context extends CanvasRenderingContext2D {}
  2 |
  3 | function draw(renderingContext: Context) {
  4 | 	for (const item of items) {
> 5 | 		renderingContext.moveTo(item.x, item.y);
    | 		                 ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  6 | 		renderingContext.lineTo(item.x + 1, item.y + 1);
  7 | 		renderingContext.stroke();
  8 | 	}
  9 | }

`;

exports[`prefer-path2d > invalid(36): function draw(renderingContext: CanvasRenderingContext2D | undefined) {\n\tfor (const item of items) {\n\t\trenderingContext!.moveTo(item.x, item.y);\n\t\trenderingContext!.lineTo(item.x + 1, item.y + 1);\n\t\trenderingContext!.stroke();\n\t}\n} 1`] = `

  1 | function draw(renderingContext: CanvasRenderingContext2D | undefined) {
  2 | 	for (const item of items) {
  3 | 		renderingContext!.moveTo(item.x, item.y);
  4 | 		renderingContext!.lineTo(item.x + 1, item.y + 1);
  5 | 		renderingContext!.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(36): function draw(renderingContext: CanvasRenderingContext2D | undefined) {\n\tfor (const item of items) {\n\t\trenderingContext!.moveTo(item.x, item.y);\n\t\trenderingContext!.lineTo(item.x + 1, item.y + 1);\n\t\trenderingContext!.stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw(renderingContext: CanvasRenderingContext2D | undefined) {
  2 | 	for (const item of items) {
> 3 | 		renderingContext!.moveTo(item.x, item.y);
    | 		                  ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		renderingContext!.lineTo(item.x + 1, item.y + 1);
  5 | 		renderingContext!.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(37): function draw(renderingContext: CanvasRenderingContext2D & {scaleFactor: number}) {\n\tfor (const item of items) {\n\t\trenderingContext.moveTo(item.x, item.y);\n\t\trenderingContext.lineTo(item.x + 1, item.y + 1);\n\t\trenderingContext.stroke();\n\t}\n} 1`] = `

  1 | function draw(renderingContext: CanvasRenderingContext2D & {scaleFactor: number}) {
  2 | 	for (const item of items) {
  3 | 		renderingContext.moveTo(item.x, item.y);
  4 | 		renderingContext.lineTo(item.x + 1, item.y + 1);
  5 | 		renderingContext.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(37): function draw(renderingContext: CanvasRenderingContext2D & {scaleFactor: number}) {\n\tfor (const item of items) {\n\t\trenderingContext.moveTo(item.x, item.y);\n\t\trenderingContext.lineTo(item.x + 1, item.y + 1);\n\t\trenderingContext.stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw(renderingContext: CanvasRenderingContext2D & {scaleFactor: number}) {
  2 | 	for (const item of items) {
> 3 | 		renderingContext.moveTo(item.x, item.y);
    | 		                 ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		renderingContext.lineTo(item.x + 1, item.y + 1);
  5 | 		renderingContext.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(38): function draw(renderingContext: unknown) {\n\tfor (const item of items) {\n\t\t(renderingContext as CanvasRenderingContext2D).moveTo(item.x, item.y);\n\t\t(renderingContext as CanvasRenderingContext2D).lineTo(item.x + 1, item.y + 1);\n\t\t(renderingContext as CanvasRenderingContext2D).stroke();\n\t}\n} 1`] = `

  1 | function draw(renderingContext: unknown) {
  2 | 	for (const item of items) {
  3 | 		(renderingContext as CanvasRenderingContext2D).moveTo(item.x, item.y);
  4 | 		(renderingContext as CanvasRenderingContext2D).lineTo(item.x + 1, item.y + 1);
  5 | 		(renderingContext as CanvasRenderingContext2D).stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(38): function draw(renderingContext: unknown) {\n\tfor (const item of items) {\n\t\t(renderingContext as CanvasRenderingContext2D).moveTo(item.x, item.y);\n\t\t(renderingContext as CanvasRenderingContext2D).lineTo(item.x + 1, item.y + 1);\n\t\t(renderingContext as CanvasRenderingContext2D).stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw(renderingContext: unknown) {
  2 | 	for (const item of items) {
> 3 | 		(renderingContext as CanvasRenderingContext2D).moveTo(item.x, item.y);
    | 		                                               ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		(renderingContext as CanvasRenderingContext2D).lineTo(item.x + 1, item.y + 1);
  5 | 		(renderingContext as CanvasRenderingContext2D).stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(39): function draw(renderingContext: unknown) {\n\tfor (const item of items) {\n\t\t(<CanvasRenderingContext2D>renderingContext).moveTo(item.x, item.y);\n\t\t(<CanvasRenderingContext2D>renderingContext).lineTo(item.x + 1, item.y + 1);\n\t\t(<CanvasRenderingContext2D>renderingContext).stroke();\n\t}\n} 1`] = `

  1 | function draw(renderingContext: unknown) {
  2 | 	for (const item of items) {
  3 | 		(<CanvasRenderingContext2D>renderingContext).moveTo(item.x, item.y);
  4 | 		(<CanvasRenderingContext2D>renderingContext).lineTo(item.x + 1, item.y + 1);
  5 | 		(<CanvasRenderingContext2D>renderingContext).stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(39): function draw(renderingContext: unknown) {\n\tfor (const item of items) {\n\t\t(<CanvasRenderingContext2D>renderingContext).moveTo(item.x, item.y);\n\t\t(<CanvasRenderingContext2D>renderingContext).lineTo(item.x + 1, item.y + 1);\n\t\t(<CanvasRenderingContext2D>renderingContext).stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw(renderingContext: unknown) {
  2 | 	for (const item of items) {
> 3 | 		(<CanvasRenderingContext2D>renderingContext).moveTo(item.x, item.y);
    | 		                                             ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		(<CanvasRenderingContext2D>renderingContext).lineTo(item.x + 1, item.y + 1);
  5 | 		(<CanvasRenderingContext2D>renderingContext).stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(4): window.requestAnimationFrame(() => {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}); 1`] = `

  1 | window.requestAnimationFrame(() => {
  2 | 	context.moveTo(220, 60);
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | });

`;

exports[`prefer-path2d > invalid(4): window.requestAnimationFrame(() => {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}); 2`] = `

Message:
  1 | window.requestAnimationFrame(() => {
> 2 | 	context.moveTo(220, 60);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | });

`;

exports[`prefer-path2d > invalid(40): for (const item of items) {\n\t(ctx satisfies object).moveTo(item.x, item.y);\n\t(ctx as object).lineTo(item.x + 1, item.y + 1);\n\tctx.stroke();\n} 1`] = `

  1 | for (const item of items) {
  2 | 	(ctx satisfies object).moveTo(item.x, item.y);
  3 | 	(ctx as object).lineTo(item.x + 1, item.y + 1);
  4 | 	ctx.stroke();
  5 | }

`;

exports[`prefer-path2d > invalid(40): for (const item of items) {\n\t(ctx satisfies object).moveTo(item.x, item.y);\n\t(ctx as object).lineTo(item.x + 1, item.y + 1);\n\tctx.stroke();\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	(ctx satisfies object).moveTo(item.x, item.y);
    | 	                       ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	(ctx as object).lineTo(item.x + 1, item.y + 1);
  4 | 	ctx.stroke();
  5 | }

`;

exports[`prefer-path2d > invalid(41): for (const item of items) {\n\tctx.moveTo(item.x, item.y);\n\tctx.lineTo(item.x + 1, item.y + 1);\n\tctx.stroke();\n} 1`] = `

Filename: file.ts

  1 | for (const item of items) {
  2 | 	ctx.moveTo(item.x, item.y);
  3 | 	ctx.lineTo(item.x + 1, item.y + 1);
  4 | 	ctx.stroke();
  5 | }

`;

exports[`prefer-path2d > invalid(41): for (const item of items) {\n\tctx.moveTo(item.x, item.y);\n\tctx.lineTo(item.x + 1, item.y + 1);\n\tctx.stroke();\n} 2`] = `

Message:
  1 | for (const item of items) {
> 2 | 	ctx.moveTo(item.x, item.y);
    | 	    ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	ctx.lineTo(item.x + 1, item.y + 1);
  4 | 	ctx.stroke();
  5 | }

`;

exports[`prefer-path2d > invalid(42): function draw(context: CanvasRenderingContext2D | OffscreenCanvasRenderingContext2D) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 1`] = `

Filename: file.ts

  1 | function draw(context: CanvasRenderingContext2D | OffscreenCanvasRenderingContext2D) {
  2 | 	for (const item of items) {
  3 | 		context.moveTo(item.x, item.y);
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(42): function draw(context: CanvasRenderingContext2D | OffscreenCanvasRenderingContext2D) {\n\tfor (const item of items) {\n\t\tcontext.moveTo(item.x, item.y);\n\t\tcontext.lineTo(item.x + 1, item.y + 1);\n\t\tcontext.stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw(context: CanvasRenderingContext2D | OffscreenCanvasRenderingContext2D) {
  2 | 	for (const item of items) {
> 3 | 		context.moveTo(item.x, item.y);
    | 		        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		context.lineTo(item.x + 1, item.y + 1);
  5 | 		context.stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(43): function draw(layer: {context: CanvasRenderingContext2D} | undefined) {\n\tfor (const item of items) {\n\t\t(layer?.context).moveTo(item.x, item.y);\n\t\t(layer?.context).lineTo(item.x + 1, item.y + 1);\n\t\t(layer?.context).stroke();\n\t}\n} 1`] = `

Filename: file.ts

  1 | function draw(layer: {context: CanvasRenderingContext2D} | undefined) {
  2 | 	for (const item of items) {
  3 | 		(layer?.context).moveTo(item.x, item.y);
  4 | 		(layer?.context).lineTo(item.x + 1, item.y + 1);
  5 | 		(layer?.context).stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(43): function draw(layer: {context: CanvasRenderingContext2D} | undefined) {\n\tfor (const item of items) {\n\t\t(layer?.context).moveTo(item.x, item.y);\n\t\t(layer?.context).lineTo(item.x + 1, item.y + 1);\n\t\t(layer?.context).stroke();\n\t}\n} 2`] = `

Message:
  1 | function draw(layer: {context: CanvasRenderingContext2D} | undefined) {
  2 | 	for (const item of items) {
> 3 | 		(layer?.context).moveTo(item.x, item.y);
    | 		                 ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  4 | 		(layer?.context).lineTo(item.x + 1, item.y + 1);
  5 | 		(layer?.context).stroke();
  6 | 	}
  7 | }

`;

exports[`prefer-path2d > invalid(5): setInterval(() => {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}, 1000); 1`] = `

  1 | setInterval(() => {
  2 | 	context.moveTo(220, 60);
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | }, 1000);

`;

exports[`prefer-path2d > invalid(5): setInterval(() => {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}, 1000); 2`] = `

Message:
  1 | setInterval(() => {
> 2 | 	context.moveTo(220, 60);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | }, 1000);

`;

exports[`prefer-path2d > invalid(6): function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}\n\nsetInterval(draw, 1000); 1`] = `

  1 | function draw() {
  2 | 	context.moveTo(220, 60);
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | }
  6 |
  7 | setInterval(draw, 1000);

`;

exports[`prefer-path2d > invalid(6): function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}\n\nsetInterval(draw, 1000); 2`] = `

Message:
  1 | function draw() {
> 2 | 	context.moveTo(220, 60);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | }
  6 |
  7 | setInterval(draw, 1000);

`;

exports[`prefer-path2d > invalid(7): const draw = () => {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n};\n\nsetInterval(draw, 1000); 1`] = `

  1 | const draw = () => {
  2 | 	context.moveTo(220, 60);
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | };
  6 |
  7 | setInterval(draw, 1000);

`;

exports[`prefer-path2d > invalid(7): const draw = () => {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n};\n\nsetInterval(draw, 1000); 2`] = `

Message:
  1 | const draw = () => {
> 2 | 	context.moveTo(220, 60);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | };
  6 |
  7 | setInterval(draw, 1000);

`;

exports[`prefer-path2d > invalid(8): function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}\n\nglobalThis.setInterval(draw, 1000); 1`] = `

  1 | function draw() {
  2 | 	context.moveTo(220, 60);
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | }
  6 |
  7 | globalThis.setInterval(draw, 1000);

`;

exports[`prefer-path2d > invalid(8): function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}\n\nglobalThis.setInterval(draw, 1000); 2`] = `

Message:
  1 | function draw() {
> 2 | 	context.moveTo(220, 60);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | }
  6 |
  7 | globalThis.setInterval(draw, 1000);

`;

exports[`prefer-path2d > invalid(9): function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}\n\nself.setInterval(draw, 1000); 1`] = `

  1 | function draw() {
  2 | 	context.moveTo(220, 60);
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | }
  6 |
  7 | self.setInterval(draw, 1000);

`;

exports[`prefer-path2d > invalid(9): function draw() {\n\tcontext.moveTo(220, 60);\n\tcontext.lineTo(170, 60);\n\tcontext.stroke();\n}\n\nself.setInterval(draw, 1000); 2`] = `

Message:
  1 | function draw() {
> 2 | 	context.moveTo(220, 60);
    | 	        ^^^^^^ Prefer reusing a \`Path2D\` object instead of rebuilding the canvas path in repeated draws.
  3 | 	context.lineTo(170, 60);
  4 | 	context.stroke();
  5 | }
  6 |
  7 | self.setInterval(draw, 1000);

`;
